manuel_deployement/httpd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-deployment
  labels:
    app: httpd-jtest
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: httpd-jtest
  template:
    metadata:
      labels:
        app: httpd-jtest
    spec:
      containers:
      - name: httpd-jtest
        image: docker.io/chenjiayu123/httpd-24-8080:6.0
        volumeMounts:
          - mountPath: /var/www/html/index.html
            name: httpd-index
            subPath: index.html
      imagePullPolicy: Always
      imagePullSecrets:
      - name: dockerhub
      volumes:
        - name: httpd-index
          configMap:
            name: httpd-index-configmap
