manuel_deployement/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd-jtest-service
spec:
  selector:
    app: httpd-jtest
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
