manuel_deployement/route.yaml
apiVersion: v1
kind: Route
metadata:
  name: httpd-jtest
  labels:
    epfl.ch/visibility: public
spec:
  host: hello-from-sre1.epfl.ch
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: httpd-jtest-service
